feat(backend): REST API - Return 403 for process related endpoints (#4228)
* feat(backend): REST API - Return 403 for process related endpoints

feat(backend): REST API - Return 403 for process related endpoints

- added check for read permissions for process related endpoints
- added exception and handler for 403 error

Closes #3998